--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -31,6 +31,10 @@ nav ul {
   font-weight: bold;
 }
 
+nav ul li:hover {
+  font-size: 15px;  
+}
+
 nav img {
   padding-left: 140px;
   margin-top: 40px;
@@ -73,6 +77,10 @@ h1 {
   font-weight: bold;
 }
 
+
+.home-text button:hover {
+  opacity: 0.8;
+}
 
 .home-H {
   position: absolute;
@@ -245,14 +253,39 @@ h1 {
 .member h2 {
   color: white;
   padding: 70px;
+  text-align: center;
+  font-size: 30px;
+}
+
+.member h2 span {
+  color: #C372FF;
+  font-weight: bold;
 }
 
 .member-div {
   display: flex;
+  text-align: center;
+  justify-content: center;
+  gap: 10px;  
+}
+
+.member-div div {
+  padding: 40px;
 }
 
 .member button {
-  padding: 100px 0 60px;
+  margin: 80px 0 60px;
+  position: relative;
+  left: 43%;
+  background-color: #C372FF;
+  padding: 13px;
+  color: white;
+  border-radius: 20px;
+  border: none;
+}
+
+.member button:hover {
+  opacity: 0.8;
 }
 
 .member-div > div > h3 {
@@ -261,4 +294,74 @@ h1 {
 
 .member-div > div > p {
   color: white;
+}
+
+.emoji-div h3 {
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+.emoji-div p {
+  line-height: 2;
+  text-align: left;
+}
+
+.faq h2 {
+  text-align: center;
+  margin: 50px 0 70px;
+  font-size: 30px;
+}
+
+.faq-div {
+  display: flex;  
+  margin-bottom: 50px;
+}
+
+.faq-container1 {
+  padding: 0 190px;
+}
+
+.faq-container2 {
+  padding: 0 190px 0 0;
+}
+
+.faq h3 {
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
+.faq-p {
+  color: #454748;
+  font-size: 14px;
+  margin-bottom: 50px;
+  line-height: 2;
+}
+
+footer {
+  background-color: #071629;
+  height: 250px;
+  
+}
+
+.footer-div {
+  display: flex;
+  padding: 100px 90px 0 100px;  
+}
+
+.social-media {
+  color: white;
+  margin-left: auto;
+  font-size: 25px;  
+}
+
+.social-media i {
+  padding: 0 10px;
+}
+
+footer p {
+  color: rgb(140, 139, 137);
+  font-size: 13px;
+  padding-top: 50px;
+  position: relative;
+  left: 43%;
 }
