--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -4,6 +4,7 @@ body, html {
   font-family: 'Sans Pro Light', sans-serif;
 }
 
+/* Header and Banner part */
 header {
   background: url("advanced.pics/Object.png");  
   color: white;
@@ -106,8 +107,7 @@ h1 {
 
 .box {
   flex: 1;
-  text-align: center;  
-  
+  text-align: center;    
 }
 
 
@@ -127,6 +127,13 @@ h1 {
   font-style: italic;  
 }
 
+
+.home-pics img {
+  margin-left: 40px;
+}
+
+/*  Quotes */
+
 .pink {
   background-color: #C372FF;
   height: 250px;
@@ -134,13 +141,9 @@ h1 {
   align-items: center;
   justify-content: left;
   padding: 50px 150px;
-  gap: 60px;
-  
+  gap: 60px;  
 }
 
-.home-pics img {
-  margin-left: 40px;
-}
 
 .pink-text {
   flex: 2;
@@ -165,6 +168,7 @@ h1 {
   font-style: italic;
 }
 
+/* Video List */
 .white-container {
   margin-bottom: 50px;
 }
@@ -245,6 +249,7 @@ h1 {
   padding-left: 20px;
 }
 
+/* Membership */
 .member {
   background-color: #071629;
   margin-top: 20px;
@@ -293,7 +298,7 @@ h1 {
 }
 
 .member-div > div > p {
-  color: white;
+  color: rgb(219, 207, 207);
 }
 
 .emoji-div h3 {
@@ -306,6 +311,7 @@ h1 {
   text-align: left;
 }
 
+/* FAQ */
 .faq h2 {
   text-align: center;
   margin: 50px 0 70px;
@@ -337,6 +343,7 @@ h1 {
   line-height: 2;
 }
 
+/* Footer */
 footer {
   background-color: #071629;
   height: 250px;
